--- a/bower.json
+++ b/bower.json
@@ -10,9 +10,14 @@
     "tests"
   ],
   "dependencies": {
+    "webcomponentsjs": "*",
+    "WeakMap": "Polymer/WeakMap#~0.4.2",
     "polymer": "~0.5.4",
+    "core-elements": "Polymer/core-elements#~0.5.4",
+    "paper-elements": "Polymer/paper-elements#~0.5.4",
     "app-router": "~2.4.0",
     "bootstrap-css": "~3.2.0",
-    "firebase-element": "Polymer/firebase-element#~0.5.4"
+    "firebase-element": "Polymer/firebase-element#~0.5.4",
+    "moment": "*"   
   }
 }
