--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name" : "Warehouse",
+  "name" : "PolymerQuiz",
   "version" : "0.1.0",
   "main" : "server.js",
   "scripts" : {
@@ -9,6 +9,7 @@
     "node" : ">=0.6"
   },
   "dependencies": {
+    "body-parser": "*",
     "express": "4.x"
   },
   "devDependencies": {
